--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -437,6 +437,7 @@ section h2{
   font-size: 18px;
   line-height: 28px;
   margin: 0 auto;
+  text-align: center;
 }
 .section7-inner .sub-title{
   display: flex;
@@ -457,29 +458,17 @@ section h2{
   padding: 50px 0 165px 0;
 }
 
-#section8{
-  padding: 0 0 250px 0;
-}
-
 .section8-inner{
   position: relative;
   width: 100%;
   height: 800px;
-  background-image: url("/토스/img/section8-img1.jpg");
+  background-image: url("/img/section8-img1.jpg");
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .section8-inner .main-title{
-  position: absolute;
-  height: 800px;
-  background: url(https://static.toss.im/assets/homepage/newtossim/section2_4_big.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.section8-inner h1{
   position: absolute;
   font-size: 93px;
   top:50%;
