--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -462,11 +462,11 @@ section h2{
   position: relative;
   width: 100%;
   height: 800px;
-  background: url("/깃허브/Toss/토스/img/section8-img1.jpg") no-repeat;
-  /* background-repeat: no-repeat; */
+  background: url("/토스/img/section8-img1.jpg");
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: rgba(0,0, 0, 0.5);
+  
   
 }
 
