--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -18,9 +18,7 @@ a{
 
 
 /* 공통영역 */
-section .main-title{
-  padding: 0 0 0 100px;
-}
+
 
 section h1{
   font-size: 26px;
@@ -34,18 +32,15 @@ section h2{
 /* 공통영역 */
 
 /* 네비게이션바 */
-#navbar{
+#header{
   position: fixed;
   width: 100%;
   z-index: 100;
-}
-
-.navbar-outer{
-  margin: 0 auto;
   background: #ffffff;
 }
 
-.navbar-inner{
+
+#header .inner{
   width: 92%;
   max-width: 1140px;
   margin: 0 auto;
@@ -55,36 +50,36 @@ section h2{
   justify-content: space-between;  
 }
 
-.navbar-inner .logo{
+#header .logo{
   padding: 20px 0;
 }
 
-.navbar-inner .navbar-items{
+#header .header-items{
   display: flex;
   justify-content: space-between;
 }
 
-.navbar-inner .navbar-items .navbar-menu ul{
+#header .header-items .header-menu ul{
   display: flex;
   justify-content: space-between;
 
 }
 
-.navbar-inner .navbar-items .language-select ul{
+#header .header-items .language-select ul{
   display: flex;
   justify-content: space-between;
 }
 
-.navbar-inner div ul li a{
+#header div ul li a{
   padding: 12px 10px;
   font-size: 15px;
 }
 
-.navbar-inner .language-select{
+#header .language-select{
   margin-left: 50px;
 }
 
-.navbar-inner .language-select span{
+#header .language-select span{
   padding : 0 10px
 }
 /* 네비게이션바 */
@@ -93,6 +88,7 @@ section h2{
 #section1{
   width:100%;
   height: 100vh;
+  position: relative;
   background-color: white;
   background-image:url(../img/new_main.png);
   background-position:center;
@@ -100,7 +96,7 @@ section h2{
   background-size: cover;
 }
 
-.section1-box{
+#section1 .inner{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -109,48 +105,49 @@ section h2{
   background: linear-gradient(180deg, white 0%, white 59px, rgba(255, 255, 255, 0) 50%)
 }
 
-.section1-box h1{
+#section1 h1{
   font-size: 62px;
   text-align: center;
   padding: 0 0 50px;
   color:black;
 }
 
-.section1-box .down-button{
+#section1 .down-button{
   display: flex;
 }
     
-.section1-box .down-button a{
+#section1 .down-button a{
   border : 1px solid #666666;
   border-radius: 10px;
   background-color: #000c1ecc;
-  padding:18px 25px;
+  padding:10px 23px;
   display: flex;
 }
   
-.section1-box .down-button a:first-child{
+#section1 .down-button a:first-child{
   margin-right: 4px;  
 }
 
-.section1-box a span{
+#section1 a span{
   color:#ffffff;
   font-weight: bold;
   margin: 0 0 0 4px;
 }
 
-.section1-box .scrolldown-button{
-  margin: 240px 0 0 0;
+#section1 .scrolldown-button{
+  position: absolute;
+  bottom:30px;
   
 }
 /* 첫번째섹션 */
 
 /* 두번째섹션 */
-.section2-inner{
+#section2 .inner{
   background: #f9fafb;
   padding: 200px 0;
 }
 
-.section2-inner h2{
+#section2 h2{
   width:100%;
   font-size: 32px;
   text-align: center;
@@ -752,3 +749,68 @@ section h2{
 }
 /* 열한번째 섹션 */
 
+/* 푸터 */
+#footer{
+ background-color: #191f28;
+ padding: 50px 0 100px 0;
+}
+
+#footer .inner{
+  margin:0 auto;
+  width:92%;
+  max-width: 1140px;
+  padding: 0 67px;
+}
+
+#footer .site-group-list{
+  display: flex;
+  margin-bottom: 50px;
+}
+
+#footer .site-group-list .list{
+  display: flex;
+  flex-direction: column;
+}
+
+#footer .site-group-list .list p{
+  color:#b0b8c1
+}
+
+#footer .site-group-list .list > *{
+  font-size: 15px;
+  width: 170px;
+  line-height: 30px;
+  color:#6b7684;
+}
+#footer .site-group-list .customer-group > *{
+  width: 420px;
+}
+
+#footer .address p{
+  font-size:15px;
+  color:#b0b8c1;
+  margin-bottom: 20px;
+}
+
+#footer .address a{
+  font-size:13px;
+  color:#8b95a1;
+}
+
+#footer .term ul{
+  display: inline-grid;
+  grid-template-columns: repeat(4 ,auto);
+  grid-column-gap: 34px;
+  margin: 30px 0;
+}
+
+#footer .term ul li > *{
+  font-size: 13px;
+  color:#6b7684;
+  line-height: 21px;
+}
+
+#footer .term ul li strong{
+  color:#b0b8c1;
+}
+/* 푸터 */
