--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -1,26 +1,25 @@
 @charset "UTF-8";
-
-@font-face {
-  font-family: 'toss';
-  src:url(../font/TossFaceFontMac.ttf);
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;&display=swap');
+html,body{width:100%;height:100%;}
+*{margin:0;padding:0;text-decoration:none;list-style:none;box-sizing:border-box;font-family:'Noto Sans KR',sans-serif;letter-spacing:-2px;line-height: 150%;}
+a,p,span{font-weight: 600;}
+h1{
+  font-size: 66px;
+  color: #000000;
+  text-align: center;
+  margin: 0 0 60px;  
 }
-*{
-  margin:0;padding:0;text-decoration:none;list-style:none;
-  box-sizing: border-box;
+h2{
+  font-size: 28px;
+  color: #3182f6;
+  margin-bottom: 30px;
 }
-span,p,h1,h2,h3,a{
-  font-family: 'toss';  
-  font-weight: bold;
+h3{
+  font-size: 50px;
+  color: #191f28
 }
-a{
-  color:#666666;
-}
-
-
-/* 공통영역 */
-
-
-section h1{
+/* 공통영역*/
+/* section h1{
   font-size: 26px;
   color:#3182f6;
 }
@@ -28,10 +27,10 @@ section h1{
 section h2{
   margin: 30px 0 0 0;
   font-size: 45px;
-}
+}  */
 /* 공통영역 */
 
-/* 네비게이션바 */
+/* 헤더 */
 #header{
   position: fixed;
   width: 100%;
@@ -39,19 +38,18 @@ section h2{
   background: #ffffff;
 }
 
-
 #header .inner{
   width: 92%;
   max-width: 1140px;
   margin: 0 auto;
-  padding: 0 0 0 20px;
+  padding-right: 25px;
   display: flex;
   align-items: center;
   justify-content: space-between;  
 }
 
 #header .logo{
-  padding: 20px 0;
+  padding: 18px 0;
 }
 
 #header .header-items{
@@ -62,7 +60,7 @@ section h2{
 #header .header-items .header-menu ul{
   display: flex;
   justify-content: space-between;
-
+  
 }
 
 #header .header-items .language-select ul{
@@ -71,18 +69,20 @@ section h2{
 }
 
 #header div ul li a{
-  padding: 12px 10px;
+  padding: 12px 15px;
   font-size: 15px;
+  color:#4e5968; 
 }
 
 #header .language-select{
   margin-left: 50px;
+  
 }
 
 #header .language-select span{
   padding : 0 10px
 }
-/* 네비게이션바 */
+/* 헤더 */
 
 /* 첫번째섹션 */
 #section1{
@@ -102,15 +102,9 @@ section h2{
   justify-content: center;
   align-items: center;
   padding-top: 165px;
-  background: linear-gradient(180deg, white 0%, white 59px, rgba(255, 255, 255, 0) 50%)
+  background:linear-gradient(180deg, white 0%, white 59px, rgba(255, 255, 255, 0) 100%);
 }
 
-#section1 h1{
-  font-size: 62px;
-  text-align: center;
-  padding: 0 0 50px;
-  color:black;
-}
 
 #section1 .down-button{
   display: flex;
@@ -155,112 +149,122 @@ section h2{
 }
 
 /* 세번째 섹션 */
-.section3-outer{
+#section3{
   padding: 250px 0 165px 0;
   background: #ffffff
 }
 
-.section3-inner{
+#section3 .inner{
   position: relative;
-  width:92%;
+  margin: 0 auto;
+  width: 92%;
   max-width: 1140px;
   height: 1200px;
-  margin: 0 auto;
 }
 
-.section3-inner .sub-title{
-  font-weight: bold;
-  font-size: 19px;
+#section3 .sub-title{  
+  font-size: 23px;
   line-height: 30px;
   color:#333d4b;
-  bottom:200px;
-  position: absolute;
+  bottom:130px;
   right: 100px; 
+  position: absolute;
+  
+}
+#section3 .home img{
+  width: 342px;
+  height: 720px;
 }
 
-.section3-inner .item1{
+#section3 .iphone12 img{
+  width: 600px;
+  height: 903px;
+}
+
+#section3 .item1{
   position: absolute;
   right: 0;
-  top:20px;
+  top:0;
   z-index: 0;
 }
 
-.section3-inner .item2{
+#section3 .item2{
   position: absolute;
-  left: 0;
-  top: 300px;
+  left: -100px;
+  top: 350px;
   z-index: 0;
 }
 
-.section3-inner .item1 .home{
+#section3 .item1 .home{
   position: absolute;
   z-index: -1;
-  top:84px;
-  right: 116px;
+  top:88px;
+  right:128px;
 }
 
-.section3-inner .item2 .home{
+#section3 .item2 .home{
   position: absolute;
   z-index: -1;
-  top:84px;
-  left:116px;
+  top:88px;
+  left:128px;
 }
+
 /* 세번째 섹션 */
 
 /* 네번째섹션 */
 
-.section4-outer{
+#section4{
   padding: 250px 0 165px 0;
   background-color: #f9fafb;
 }
 
-.section4-inner{  
+#section4 .inner{  
   width: 92%;
   max-width: 1140px;
   margin:0 auto;
 }
 
-.section4-inner .item{
+#section4 .item{
   margin: 100px 0 0 0;
 }
 
-.section4-inner .item .main-text{
+#section4 .item .main-text{
   padding: 0 0 0 38px;
 }
 
-.section4-inner .item p{
+#section4 .item p{
   padding: 0;
 }
 
-.section4-inner .item .text1{
+#section4 .item .text1{
   color: #3182f6;
   font-size: 16px;
 }
 
-.section4-inner .item .text2{
+#section4 .item .text2{
   color: #333d4b;
   font-size: 34px;
   margin:20px 0;
 }
 
-.section4-inner .item .text3{
+#section4 .item .text3{
   color: #6b7684;
   font-size: 18px;
 }
 
-.section4-inner .item1{
+#section4 .item1{
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.section4-inner .item2{
+#section4 .item2{
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.section4-inner .item3{
+#section4 .item3{
   display: flex;
   justify-content: space-around;
   align-items: center;
