--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
-html,body,.wrap{width:100%;height:100%;}
+#wraper{width:100%;height:100%;}
 *{margin:0;padding:0;text-decoration:none;list-style:none;box-sizing:border-box;font-family: 'Noto Sans KR', sans-serif;letter-spacing:-1.5px;line-height: 150%;}
 a,p,span{font-weight: 500;}
 
@@ -37,25 +37,19 @@ h3{
   max-width: 1140px;
   margin: 0 auto;  
 }
+.fixed{
 
-/* 공통영역*/
-/* section h1{
-  font-size: 26px;
-  color:#3182f6;
 }
-
-section h2{
-  margin: 30px 0 0 0;
-  font-size: 45px;
-}  */
-/* 공통영역 */
-
 /* 헤더 */
 #header{
   position: fixed;
   width: 100%;
   z-index: 100;
   background: #ffffff;
+}
+
+#header.fixedOn{
+  border-bottom: 1px solid rgba(0,27,55,.1);
 }
 
 #header .container{
@@ -73,13 +67,13 @@ section h2{
   justify-content: space-between;
 }
 
-#header .header-items .header-menu ul{
+#header .header-menu ul{
   display: flex;
   justify-content: space-between;
   
 }
 
-#header .header-items .language-select ul{
+#header .language-select ul{
   display: flex;
   justify-content: space-between;
 }
@@ -156,7 +150,7 @@ section h2{
 
 #section1 .scrolldown-button{
   position: absolute;
-  bottom:30px;
+  bottom: -420px;
   
 }
 /* 첫번째섹션 */
