--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
-#wraper{width:100%;height:100%;}
+#body{width:100%;overflow-x:hidden;}
 *{margin:0;padding:0;text-decoration:none;list-style:none;box-sizing:border-box;font-family: 'Noto Sans KR', sans-serif;letter-spacing:-1.5px;line-height: 150%;}
 a,p,span{font-weight: 500;}
 
