--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -1,9 +1,11 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
-#body{width:100%;overflow-x:hidden;}
+#body{width:100%;}
 *{margin:0;padding:0;text-decoration:none;list-style:none;box-sizing:border-box;font-family: 'Noto Sans KR', sans-serif;letter-spacing:-1.5px;line-height: 150%;}
 a,p,span{font-weight: 500;}
-
+#wraper{
+  
+}
 h1{
   font-size: 66px;
   color: #000000;
@@ -37,9 +39,7 @@ h3{
   max-width: 1140px;
   margin: 0 auto;  
 }
-.fixed{
 
-}
 /* 헤더 */
 #header{
   position: fixed;
@@ -781,7 +781,11 @@ h3{
 #footer .site-group-list .list{
   display: flex;
   flex-direction: column;
-  width: calc(925px / 4);
+  width: 170px;
+}
+
+#footer .site-group-list .list:last-child{
+  flex: 1;
 }
 
 #footer .site-group-list .list p{
